--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "user",
   "version": "1.0.0",
   "description": "A basic node user application",
-  "main": "user_app.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js",
